--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "core-js": "^3.25.0",
     "dotenv": "^16.0.1",
-    "live-server": "^1.1.0"
+    "live-server": "^1.1.0",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "parcel": "^2.7.0"
